chore: update .env.example with comprehensive API configuration
- Document all 5 pipeline stage API keys with provider links
- Add USE_REAL_APIS flag for toggling mock/real mode
- Add API_TIMEOUT configuration option

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,36 @@
-# API Keys (optional - mock data is used for demo)
+# DomainLens API Configuration
+# Copy this file to .env.local and fill in your API keys
+
+# ============================================
+# PIPELINE STAGE API KEYS
+# ============================================
+
+# Stage 1: Research - Yutori Deep Web Research
+# Get your key at: https://yutori.ai
 YUTORI_API_KEY=
+
+# Stage 2: Extract - TinyFish/AgentQL Structured Extraction
+# Get your key at: https://tinyfish.ai
 TINYFISH_API_KEY=
+
+# Stage 3: Visualize - Freepik AI Image Generation
+# Get your key at: https://freepik.com/api
 FREEPIK_API_KEY=
+
+# Stage 4: Synthesize - Tonic Fabricate Synthetic Data
+# Get your key at: https://tonic.ai
 TONIC_API_KEY=
+
+# Stage 5: Generate - Cline Code Generation
+# Note: Cline integration may use local model or API
+CLINE_API_KEY=
+
+# ============================================
+# OPTIONAL SETTINGS
+# ============================================
+
+# Set to 'true' to use real APIs, 'false' for mock data (default)
+USE_REAL_APIS=false
+
+# API request timeout in milliseconds (default: 30000)
+API_TIMEOUT=30000
